P5 E-learning/force-app/main/default/objects/ModuloUser__c/ModuloUser__c.object-meta.xml
<CustomObject>
    <label>ModuloUser</label>
    <nameField>
        <displayFormat>MU-{0000}</displayFormat>
        <label>ModuloUser Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ModulosUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>