P5 E-learning/force-app/main/default/objects/ModuloUser__c/fields/Modulo__c.field-meta.xml
<CustomField>
    <fullName>Modulo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modulo</label>
    <referenceTo>Modulo__c</referenceTo>
    <relationshipLabel>MoludosUsers</relationshipLabel>
    <relationshipName>MoludosUsers</relationshipName>
    <type>Lookup</type>
</CustomField>