P5 E-learning/force-app/main/default/objects/ModuloUser__c/fields/Progreso__c.field-meta.xml
<CustomField>
    <fullName>Progreso__c</fullName>
    <formula>UnidadesCompletas__c /  Modulo__r.CantidadUnidades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Progreso</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>