P5 E-learning/force-app/main/default/objects/ModuloUser__c/fields/Puntos__c.field-meta.xml
<CustomField>
    <fullName>Puntos__c</fullName>
    <label>Puntos</label>
    <summarizedField>UnidadUser__c.Puntos__c</summarizedField>
    <summaryForeignKey>UnidadUser__c.ModuloUser__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>