P5 E-learning/force-app/main/default/objects/ModuloUser__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <formula>Text(  Modulo__r.Skills__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Skill</label>
    <type>Text</type>
</CustomField>