P5 E-learning/force-app/main/default/objects/ModuloUser__c/fields/UnidadesCompletas__c.field-meta.xml
<CustomField>
    <fullName>UnidadesCompletas__c</fullName>
    <label>UnidadesCompletas</label>
    <summaryFilterItems>
        <field>UnidadUser__c.EstadoUnidad__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryForeignKey>UnidadUser__c.ModuloUser__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>