P5 E-learning/force-app/main/default/objects/ModuloUser__c/fields/UserReportes__c.field-meta.xml
<CustomField>
    <fullName>UserReportes__c</fullName>
    <description>al campo lookup le pregunta si es igual al user que esta en este momento 
https://help.salesforce.com/s/articleView?id=000338834&amp;type=1</description>
    <formula>IF(User__c  = $User.Id , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserReportes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>