P5 E-learning/force-app/main/default/objects/ModuloUser__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Progreso__c</columns>
    <columns>UnidadesCompletas__c</columns>
    <columns>Puntos__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>